kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  annotations:
    iam.amazonaws.com/permitted: .*
