kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-app
  sessionAffinity: None
  type: NodePort
